# tippspiel-sr-lju-ranking

./: .gitignore  README.md  bettors.csv  config.toml.example  index.html  ljubljana_ranking.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
scripts/: run_full_pipeline.sh
src/tippspiel_crawler/: __init__.py  crawl_ranking.py  export_ranking_html.py  extractors.py
tests/: test_bettors_config.py  test_bonus_enrichment.py  test_config_loading.py  test_export_ranking_html.py  test_extractors.py  test_popup_dismissal.py
